--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ lang: en
 title: Bulma Clean Theme
 tagline: Bulma Clean Theme
 email: your-email@domain.com
+theme: bulma-clean-theme
 description: >
   The demo site for Bulma Clean Theme, made for Jekyll and GitHub pages websites
 baseurl: "/bulma-clean-theme"
